--- a/Página Inicial/Style.css
+++ b/Página Inicial/Style.css
@@ -1,3 +1,33 @@
-ul {
-    list-style: none;
+* {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        background-color: rgb(233, 232, 231);
+      }
+html {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.inicial {
+    display: flex; 
+    list-style: none; 
+    padding: 20px 60px; 
+    text-decoration: none; 
+    
+}
+.pagina  {
+        flex: 1; 
+        margin: 0 10px;     
+
+} 
+.inicial, .pagina, a {
+    text-decoration: none;
+    color: black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    background-color: rgb(153, 152, 152);
+}
+img {
+    border-radius: 25px;
+
 }
