--- a/Página Inicial/Style.css
+++ b/Página Inicial/Style.css
@@ -12,7 +12,7 @@ html {
     list-style: none; 
     padding: 20px 60px; 
     text-decoration: none; 
-    
+    width: 100%; height: 100%; background: rgba(255, 255, 255, 0.70)
 }
 .pagina  {
         flex: 1; 
@@ -30,3 +30,4 @@ html {
 img {
     border-radius: 25px;
 }
+
