--- a/Página Inicial/Style.css
+++ b/Página Inicial/Style.css
@@ -1,33 +1,39 @@
-* {
-        margin: 0;
-        padding: 0;
-        text-align: center;
-        background-color: rgb(233, 232, 231);
-      }
 html {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    line-height: 1;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
 }
-.inicial {
-    display: flex; 
-    list-style: none; 
-    padding: 20px 60px; 
-    text-decoration: none; 
-    width: 100%; height: 100%; background: rgba(255, 255, 255, 0.70)
-}
-.pagina  {
-        flex: 1; 
-        margin: 0 10px;     
 
-} 
-.inicial, .pagina, a {
+body {
+    line-height: 1.5;
+    margin: 0;
+    padding: 0;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+header, main {
+    margin: 0;
+    padding: 10px;
+}
+.navbar {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+.navbar li {
+    margin: 0 15px;
+}
+.navbar a {
+    color: rgb(22, 17, 17);
     text-decoration: none;
-    color: black;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 15px;
-    font-weight: bold;
-    background-color: rgb(153, 152, 152);
+    padding: 10px 15px;
+    display: block;
 }
-img {
-    border-radius: 25px;
+.navbar a:hover {
+    background-color: #272885;
+    border-radius: 4px;
 }
-
