--- a/Style.css
+++ b/Style.css
@@ -4,15 +4,12 @@
     box-sizing: border-box;
 }
 
-html, body {
-    height: 100%; 
-}
 
 body {
     font-family: "Montserrat", sans-serif;
     line-height: 1.5;
-    display: flex; 
-    flex-direction: column; 
+    display: flex;
+    flex-direction: column;
 }
 
 header, main, footer {
@@ -20,19 +17,26 @@ header, main, footer {
 }
 
 .barra-superior {
-    background-color: #141414; 
+    background-color: #141414;
     color: #ffffff;
 }
+
 nav {
     display: flex;
-    align-items: center; 
+    align-items: center;
 }
 
-.logo {
-    height: 70px; 
-    margin-right: 45px; 
-    margin-left: 70px;
+.logo-background {
+    height: 70px;
+    margin-right: 45px;
+    margin-left: 80px;
+    background-image: url('https://www.freepnglogos.com/uploads/counter-strike-png-logo/counter-strike-global-offensive-full-version-png-logo-3.png'); /* Caminho relativo à imagem */
+    background-size: contain; 
+    background-repeat: no-repeat;
+    
+
 }
+
 .navbar {
     list-style: none;
     display: flex;
@@ -47,7 +51,7 @@ nav {
 }
 
 .navbar a {
-    color: #ffffff; 
+    color: #ffffff;
     text-decoration: none;
     padding: 10px 15px;
     display: block;
@@ -57,21 +61,47 @@ nav {
     background-color: #212121;
     border-radius: 4px;
 }
+
 .barra-inferior {
-    background-color: #212121; 
-    color: #ffffff; 
-    padding: 10px 0; 
-    text-align: center; 
-    flex-shrink: 0; 
+    background-color: #212121;
+    color: #ffffff;
+    padding: 10px 0;
+    text-align: center;
+    flex-shrink: 0;
     margin-top: auto;
     width: 100%;
-} 
+}
+
 @media (max-width: 768px) {
     .logo {
-        height: 40px; 
+        height: 40px;
     }
-.navbar li {
-        margin: 5px 0; 
+    .navbar li {
+        margin: 5px 0;
     }
 }
 
+.capacss {
+    width: 100%;
+    height: 570px;
+    background-image: url('https://cdn-62cb22a2c1ac1835ecef9f37.closte.com/wp-content/uploads/2022/01/csgotr.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+} 
+
+.section ul,
+.section1 ul,
+.section2 ul,
+.section3 ul,
+.section4 ul,
+.section5 ul {
+    list-style-type: none;
+}
+section {
+    text-align: start;
+    color: #212121;
+   
+    padding-bottom: 50px;
+}
