--- a/Style.css
+++ b/Style.css
@@ -3,7 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+:root {
+    font-size: 100%;
+}
 body {
     font-family: "ubuntu", sans-serif;
     line-height: 1.5;
@@ -125,5 +127,5 @@ section {
     text-align: start;
     color: #040404;
     padding-bottom: 50px;
->>>>>>> ca479e9b23e663694d3de1e66f665a3fd6754c35
 }
+
