--- a/Style.css
+++ b/Style.css
@@ -104,7 +104,7 @@ footer p {
 
 .capacss {
     width: 100%;
-    height: 570px;
+    height: 500px;
     background-image: url('https://cdn-62cb22a2c1ac1835ecef9f37.closte.com/wp-content/uploads/2022/01/csgotr.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -126,4 +126,18 @@ section {
     color: #040404;
     padding-bottom: 50px;
 
+}
+h1 {
+    margin-top: 380px;
+    text-align:end;
+    font-size: 70px;
+}
+p {
+    text-align: center;
+    font-size: 30px;
+}
+h2 {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 450px;
 }
